# iCAN

./: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  PRIVACY.md  README.md  appstore.bzl  device_config.bzl.template  team_config.bzl.template
.githooks/: pre-commit
bazel/: BUILD.bazel
bazel/driverkit/: BUILD.bazel  clang_wrapper.sh  defs.bzl  driverkit_cc.bzl  driverkit_extension.bzl  iig.bzl  ios_application_with_dext.bzl  providers.bzl  xcodeproj_compat.bzl
can_client/: BUILD.bazel  can_client.cc  can_client.h  ipc_methods.h  shared_ring.h  shared_ring_io.h
can_schema/: BUILD.bazel  Cargo.toml
can_schema/cc/: can_schema.cc  can_schema.h
can_schema/include/: can_schema_ffi.h
can_schema/src/: compile.rs  decode.rs  ffi.rs  ir.rs  lib.rs  parser.rs  runtime.rs  status.rs
can_schema/testdata/: demo.dbc
can_schema/tests/: CanSchemaSwiftTestBridgingHeader.h  CanSchemaSwiftTests.swift  can_schema_core_test.rs  can_schema_ffi_test.rs  can_schema_test.cpp
docs/: build-and-signing.md
examples/: README.md
examples/can-client-demo/: BUILD.bazel  BridgingHeader.h  Info.plist
examples/can-client-demo/app/: CANViewModel.swift  ContentView.swift
ican/: BUILD.bazel  Info.plist  iCAN-Bridging-Header.h
ican/AppIcon.icon/: icon.json
ican/app/: BandwidthTestView.swift  BidirTestView.swift  CANConnection.swift  CANDashboardViewModel.swift  CANMessage.swift  ChartsView.swift  CommonViews.swift  ConnectionSheet.swift  ContentView.swift  DashboardView.swift  DiagnosticView.swift  DistBidirTestView.swift  HeaderView.swift  MessageLogView.swift  SerialAdapter.swift  StatsModels.swift  UIModels.swift  iCANApp.swift
ican/perf/: DashboardMetricsEngine.cpp  DashboardMetricsEngine.hpp  FlightWindow.hpp  FlightWindow_test.cpp  MetricsEngine.cpp  MetricsEngine.hpp  TestEngines.cpp  TestEngines.hpp
protocol/: BUILD.bazel  can.h  error.h
scripts/: BUILD.bazel  check_private_paths.sh  check_private_paths_test.sh  create_dext_profile.sh  deploy_ios_device.sh  embed_dext.sh  find_profile.sh  setup.sh  stream_ios_device_logs.sh
stub_lib/: BUILD.bazel
usb_can_driver/: BUILD.bazel  Info.plist  USBCANDriver.entitlements  driver_types.h  usb_can_driver.cpp  usb_can_driver.iig  usb_can_user_client.cpp  usb_can_user_client.iig
usb_can_driver/codecs/: gsusb_codec.cc  gsusb_codec.h  pcan_codec.cc  pcan_codec.h  slcan_codec.cc  slcan_codec.h
