# Root BUILD file for iCAN

load("//bazel/driverkit:defs.bzl", "ios_application_with_dext")
load("@rules_apple//apple:ios.bzl", "ios_application")
load(
    "@rules_xcodeproj//xcodeproj:defs.bzl",
    "top_level_target",
    "xcodeproj",
    "xcode_provisioning_profile",
)
load("//:team_config.bzl", "TEAM_ID")

package(default_visibility = ["//visibility:public"])

# =============================================================================
# Xcode Project Generation
# =============================================================================

xcodeproj(
    name = "xcodeproj",
    project_name = "ican",
    top_level_targets = [
        top_level_target(
            label = "//:app_ios",
            target_environments = ["device"],
        ),
    ],
    post_build = """\
if [[ "$PLATFORM_NAME" == *simulator* ]]; then exit 0; fi
# Inject a hook at the end of copy_outputs.sh so embed_dext.sh runs AFTER
# the iCAN target copies its outputs (BazelDependencies' post_build
# runs before iCAN's copy phase, so we must hook into copy_outputs.sh).
COPY_SCRIPT="$BAZEL_INTEGRATION_DIR/copy_outputs.sh"
MARKER="# --- dext-embed-hook ---"
if ! grep -q "$MARKER" "$COPY_SCRIPT" 2>/dev/null; then
    printf '\\n%s\\n%s\\n' "$MARKER" \
      '[ -x "$SRCROOT/scripts/embed_dext.sh" ] && "$SRCROOT/scripts/embed_dext.sh" || true' \
      >> "$COPY_SCRIPT"
fi
""",
    associated_extra_files = {
        "//:app_ios": [
            "//usb_can_driver:usb_can_driver.iig",
            "//usb_can_driver:usb_can_driver.cpp",
            "//usb_can_driver:usb_can_user_client.iig",
            "//usb_can_driver:usb_can_user_client.cpp",
            "//usb_can_driver:Info.plist",
            "//can_client:can_client.h",
            "//can_client:can_client.cc",
        ],
    },
)

# =============================================================================
# Provisioning
# =============================================================================

APP_BUNDLE_ID = "com.hhkblogi.ican"

genrule(
    name = "local_profile",
    outs = ["iCAN.mobileprovision"],
    cmd = "$(location //scripts:find_profile.sh) " + TEAM_ID + " " + APP_BUNDLE_ID + " $@",
    tools = ["//scripts:find_profile.sh"],
    local = True,
    tags = ["no-cache"],
)

xcode_provisioning_profile(
    name = "xcode_profile",
    managed_by_xcode = True,
    provisioning_profile = ":local_profile",
    team_id = TEAM_ID,
)

# =============================================================================
# iOS Application
# =============================================================================

ios_application(
    name = "app_ios",
    app_icons = ["//ican:AppIcon"],
    bundle_id = "com.hhkblogi.ican",
    entitlements = "//ican:iCAN.entitlements",
    families = ["ipad"],
    infoplists = ["//ican:Info.plist"],
    minimum_os_version = "26.0",
    provisioning_profile = ":xcode_profile",
    deps = ["//ican:iCANLib"],
)

# =============================================================================
# iOS Application with Embedded .dext
# =============================================================================

ios_application_with_dext(
    name = "app_ios_with_dext",
    app = ":app_ios",
    app_name = "iCAN",
    dext = "//usb_can_driver:USBCANDriver",
)
