# iCAN — iPadOS App
#
# Intermediate targets are tagged "manual" because swift_library / objc_library
# have no iOS configuration on their own — they only get the correct iPadOS SDK
# when built transitively through ios_application.

exports_files(
    [
        "Info.plist",
        "iCAN.entitlements",
        "iCAN-Bridging-Header.h",
    ],
    visibility = ["//visibility:public"],
)

# App icon (Icon Composer format)
filegroup(
    name = "AppIcon",
    srcs = glob(["AppIcon.icon/**"]),
    visibility = ["//visibility:public"],
)

load("@rules_swift//swift:swift.bzl", "swift_library")

# C++ performance layer (MetricsEngine, TestEngines)
objc_library(
    name = "iCANObjC",
    srcs = [
        "perf/DashboardMetricsEngine.cpp",
        "perf/MetricsEngine.cpp",
        "perf/TestEngines.cpp",
    ],
    hdrs = [
        "iCAN-Bridging-Header.h",
        "perf/DashboardMetricsEngine.hpp",
        "perf/FlightWindow.hpp",
        "perf/MetricsEngine.hpp",
        "perf/TestEngines.hpp",
    ],
    includes = ["perf"],
    copts = ["-std=c++23"],
    sdk_frameworks = ["IOKit"],
    tags = ["manual"],
    deps = ["//can_client"],
    visibility = ["//visibility:public"],
)

# Swift app library (all SwiftUI views, models, viewmodels)
swift_library(
    name = "iCANLib",
    srcs = glob(["app/**/*.swift"]),
    copts = [
        "-cxx-interoperability-mode=default",
        "-import-objc-header",
        "$(execpath iCAN-Bridging-Header.h)",
        "-default-isolation=MainActor",
        "-enable-upcoming-feature", "MemberImportVisibility",
    ],
    module_name = "iCAN",
    swiftc_inputs = ["iCAN-Bridging-Header.h"],
    tags = ["manual"],
    deps = [":iCANObjC"],
    visibility = ["//visibility:public"],
)

# Header-only FlightWindow library (for tests)
cc_library(
    name = "flight_window",
    hdrs = ["perf/FlightWindow.hpp"],
    includes = ["perf"],
)

# Unit tests for FlightWindow lock-free delivery tracker
cc_test(
    name = "flight_window_test",
    srcs = ["perf/FlightWindow_test.cpp"],
    copts = ["-std=c++23"],
    deps = [
        ":flight_window",
        "@googletest//:gtest_main",
    ],
)
